--- a/stu_config.yml
+++ b/stu_config.yml
@@ -1,5 +1,5 @@
 #-------------------------- Login Credits----------------------------
-student_id: "BC220412445"
-password: "Kumailtaha1."
+student_id: "Id" # Enter your ID here
+password: "Pasword" # Entr your Password here
 #-------------------------- Course ID----------------------------
 course_id: "6"
